Replace deprecated URL string constructor with URI.create
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>